# long-read-pipelines

./: .bumpversion.cfg  .cloudbuild.yaml  .dockstore.yml  .gitallowed  .gitattributes  .gitignore  404.html  ALL_CALLABLES_IN_TASK_FOLDER.tsv  AoU_MitoReport.md  BRANCH_IS_DEPRECATED.txt  CLAUDE.md  LICENSE  README.md  TaskShardList.py  VERSION  VERSION.json  cloudbuild.yaml  find_orphan_callables.sh  find_orphan_callables_fast.sh  go  go_mt  index.html  index.md.bak  list_wdl_definitions.sh  mkdocs.yml  orphan_callables.tsv  requirements.txt  search.html  sitemap.xml  tox.ini  trace_task_dependencies.sh
data/: CEU_NA12878rep1.json  CEU_NA12878rep2.json  CEU_NA12891.json  CEU_NA12892.json  CHS_HG00512.json  CHS_HG00513.json  CHS_HG00514.json  GWD_HG02982_CLR.json  GWD_HG02983.json  GWD_HG02984.json  PUR_HG00731.json  PUR_HG00732.json  PUR_HG00733.json  RGP_94_1.json  RGP_94_2_LowYield.json  RGP_94_2_Rework.json  RGP_94_3_LowYield.json  RGP_94_3_Rework.json  YRI_NA19238.json  YRI_NA19239.json  YRI_NA19240.json  ecoli.json  smalltest.json
deprecated_wdl/: DownloadFromHudsonAlpha.wdl  ONT10x.wdl  PBCCS.wdl  PBCCS10x.wdl  PBCCSDemultiplexWholeGenome.wdl  PBCLRDemultiplexWholeGenome.wdl  PostprocessCCSedDemultiplexedSMRTCell.wdl  PreprocessBarcodedCCSedSMRTCell.wdl  README.md  TestCromwell.wdl
development_guide/: index.html
docker/lr-rescuehardclips/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  TESTING.md
docker/lr-rescuehardclips/scripts/: generate_test_bam.py  generate_test_bam.usingGRCh38seq.py
docker/lr-rescuehardclips/src/: main.rs
(+2510 files in other folders)
